--- a/CSS/advanceCSS2/style.scss
+++ b/CSS/advanceCSS2/style.scss
@@ -17,7 +17,16 @@ html, body {
             height: 20rem;
             width: 35rem;
             background: conic-gradient(from 63deg ,red,blue,white,black);
+            animation: rotateConic 1s linear infinite;
             box-shadow: 0 0 0.2rem 1rem gold; // x | y | blur | spread-radius | color
         }
+    }
+}
+@keyframes rotateConic{
+    from{
+        background: conic-gradient(from 63deg ,red,blue,white,black,red);
+    }
+    to{
+        background: conic-gradient(from 20deg ,black,white,blue,red,black);
     }
 }
